# headliner

./: .gitignore  Procfile  README.md  app.yaml  clock.py  clustering.py  dump.rdb  feeds.json  gensim_test.py  headliner.py  llm_interface.py  main.py  mash_headlines.py  news.py  pyproject.toml  requirements.txt  terminate.json  utilities.py  w2v.py
headliner/: pip-selfcheck.json
headliner/local/: bin  include  lib
resources/: feeds.json
src/: clustering.py  main.py  news.py  requirements.txt  utilities.py  w2v.py
src/api/: clusters.py  cors.py  headliner.py  staticfile.py
src/data/: clock.py  clustering.py  main.py  news.py  tsne.py  utilities.py  w2v.py
src/resources/: clusters  clusters.json  config.json  feeds.json  headline_training  output30  scorpio  sites.json  stopwords
src/static/: index.html
static/: clusters.css  headlinr.js  index.html  styles.css
templates/: clusters.html
